sg.tf
# Security group for the EFS share and mount target
resource "aws_security_group" "efs_sg" {
  name        = "${var.service_name}-efs-sg"
  description = "Allow traffic to the EFS storage volume"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

# Security group for the ALB
resource "aws_security_group" "alb_sg" {
  name        = "${var.service_name}-alb-sg"
  description = "Allow traffic to the ALB created for the ${var.service_name} service"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

# Security group for the ECS service
resource "aws_security_group" "ecs_service_security_group" {
  name   = "${var.service_name}-service-access"
  vpc_id = var.vpc_id
}

resource "aws_security_group_rule" "allow_outbound_ecs_service_all" {
  security_group_id = aws_security_group.ecs_service_security_group.id
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "allow_inbound_ecs_service_all" {
  security_group_id = aws_security_group.ecs_service_security_group.id
  type              = "ingress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}
